# wendler-5-3-1

./: .gitignore  LICENSE  README.md  backup-db.sh  init.sh  install-docker-gcp.sh  run-tests.sh
.github/workflows/: backend-tests.yml  ci.yml  deploy-pages.yml  docker.yml  frontend-tests.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  crud.py  crud_original.py  database.py  database_original.py  main.py  main_original.py  models.py  models_original.py  pyproject.toml  schemas_original.py  wendler.db  wendler_service.py
backend/alembic/: env.py
backend/alembic/versions/: 3e900b603868_create_users_and_one_rms_tables.py  522f52a2654c_add_workout_schedules_and_cycles.py
backend/tests/: conftest.py  test_crud.py  test_models.py  test_movements_api.py  test_wendler_service.py
frontend/WendlerApp/: .eslintignore  App.tsx  README.md  app.json  index.web.js  jest.config.js  package-lock.json  package.json  webpack.config.js
frontend/WendlerApp/android/: settings.gradle
frontend/WendlerApp/android/app/: build.gradle
frontend/WendlerApp/ios/: Podfile
frontend/WendlerApp/ios/WendlerApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
frontend/WendlerApp/ios/WendlerApp.xcodeproj/: project.pbxproj
frontend/WendlerApp/public/: index.html
frontend/WendlerApp/src/: setupTests.js
frontend/WendlerApp/src/components/: TabNavigation.tsx
frontend/WendlerApp/src/context/: AuthContext.tsx
scripts/: README.md  auto-deploy.sh  backup-db.sh  check-instance.sh  fix-instance.sh  init.sh  setup-cron.sh
(+12 files in other folders)
