[project]
name = "wendler-5-3-1"
version = "0.1.0"
description = "Wendler 5-3-1 workout tracking service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "authlib>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "itsdangerous>=2.0.0",
]
